tests/cases/fail/float_int_compare_mismatch.u
import sti.

-> main() {
  boolean ok = 1.0f < 2u.
  if (ok) {
    sti<->print(1u).
  }
}
